--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ WEBHOOK_URL=https://n8n.tudominio.com/
 # Configuración de N8N
 N8N_PROTOCOL=https
 GENERIC_TIMEZONE=America/Mexico_City
+N8N_RUNNERS_ENABLED=true
+N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
 
 # Autenticación N8N - CAMBIAR CREDENCIALES
 N8N_BASIC_AUTH_ACTIVE=true
