--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,16 @@ services:
       - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
       - "--certificatesresolvers.letsencrypt.acme.email=${LETSENCRYPT_EMAIL}"
       - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+
     labels:
       - "traefik.enable=true"
       # --- ROUTER PARA EL DASHBOARD DE TRAEFIK ---
       - "traefik.http.routers.traefik.rule=Host(`${TRAEFIK_HOST}`)"
       - "traefik.http.routers.traefik.entrypoints=websecure"
       - "traefik.http.routers.traefik.tls.certresolver=letsencrypt"
-      - "traefik.http.routers.traefik.service=api@internal"
+#      - "traefik.http.routers.traefik.service=api@internal"
+      - "--traefik.http.services.traefik.loadbalancer.server.port=8080"
+
 
       # --- MIDDLEWARE DE AUTENTICACIÓN ---
       - "traefik.http.middlewares.traefik-auth.basicauth.users=admin:$$2y$$05$$hCX69OcEPIGkBwR97tT4GOEEIQ6Y7so3FmWD.GKWWRD4IbCEOEVKi"
